misc4.0/etl/etl4/components/openshift-tempo-instance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: openshift-tempo-instance
    openshift.io/cluster-monitoring: 'true'
    argocd.argoproj.io/managed-by: openshift-gitops
  name: openshift-tempo-instance
