misc4.0/etl/etl4/components/openshift-tempo-instance/tempo-tenant-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tempo-tenant
spec:
  to:
    kind: Service
    name: tempo-console
    weight: 100
  port:
    targetPort: http-console
  tls:
    termination: edge
  wildcardPolicy: None
